# cpp-quick

./: CMakeLists.txt  Install.md
CMake/: setup.cmake
http/: CMakeLists.txt  Http.cpp
http/include/: HttpClient.h  HttpServer.h
http/src/: HttpClient.cpp  HttpServer.cpp
http/test/: TestHttp.cpp  TestHttp.h  demo.cpp  main.cpp
scripts/: 1-install-os-packages.sh  2-prepare-environment.sh  3-install-libraries.sh  4-verify.sh  5-setup-project.md
util/: CMakeLists.txt
util/include/: Json.h
util/src/: Json.cpp
